--- a/js/package.json
+++ b/js/package.json
@@ -23,10 +23,14 @@
   },
   "dependencies": {
     "@libsql/client": "^0.14.0",
+    "@schedule-x/theme-default": "^2.13.0",
+    "@schedule-x/vue": "^2.12.0",
     "better-sqlite3": "^11.7.2",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.1",
     "drizzle-orm": "^0.38.3",
-    "python-shell": "^5.0.0"
+    "python-shell": "^5.0.0",
+    "v-calendar": "^3.1.2"
   }
 }
