--- a/js/package.json
+++ b/js/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/ui": "^2.20.0",
+    "@nuxtjs/tailwindcss": "6.12.2",
     "@types/better-sqlite3": "^7.6.12",
     "nuxt": "^3.15.0",
     "tsx": "^4.19.2",
@@ -31,6 +32,7 @@
     "drizzle-kit": "^0.30.1",
     "drizzle-orm": "^0.38.3",
     "python-shell": "^5.0.0",
+    "tailwindcss": "^3.4.17",
     "v-calendar": "^3.1.2"
   }
 }
